Update po files

--- a/server/language/ar_DZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar_DZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -921,17 +921,17 @@ msgstr "ترتيب حسب: متكرر"
 msgid "Sort by: Subject"
 msgstr "ترتيب حسب: الموضوع"
 
-msgid "Startdate"
-msgstr "تاريخ البدء"
+msgid "Start Date"
+msgstr "بداية الموعد"
 
-msgid "Sort by: Startdate"
-msgstr "ترتيب حسب: تاريخ البدء"
+msgid "Sort by: Start Date"
+msgstr ""
 
-msgid "Enddate"
-msgstr "ترتيب حسب: تاريخ الانتهاء"
+msgid "End Date"
+msgstr "نهاية الموعد"
 
-msgid "Sort by: Enddate"
-msgstr "ترتيب حسب: تاريخ الانتهاء"
+msgid "Sort by: End Date"
+msgstr ""
 
 msgid "Organizer"
 msgstr "المُنظم"
@@ -944,12 +944,6 @@ msgstr "الحضور اختياري"
 
 msgid "Show Time As"
 msgstr "إظهار التاريخ كـ"
-
-msgid "Start Date"
-msgstr "بداية الموعد"
-
-msgid "End Date"
-msgstr "نهاية الموعد"
 
 msgid "Recurrence pattern"
 msgstr "نمط التكررار"
@@ -1595,16 +1589,16 @@ msgstr ""
 msgid "Sort by: Resources"
 msgstr ""
 
-msgid "Recurring Startdate"
+msgid "Recurring Start Date"
 msgstr ""
 
-msgid "Sort by: Recurring Startdate"
+msgid "Sort by: Recurring Start Date"
 msgstr ""
 
-msgid "Recurring Enddate"
+msgid "Recurring End Date"
 msgstr ""
 
-msgid "Sort by: Recurring Enddate"
+msgid "Sort by: Recurring End Date"
 msgstr ""
 
 msgid "Recurring Pattern"
@@ -1894,6 +1888,20 @@ msgid "Decline and delete"
 msgstr ""
 
 msgid "Mark complete and delete"
+msgstr ""
+
+msgid "Following recipients are already exists"
+msgstr ""
+
+#, fuzzy
+msgid "Duplicate recipients"
+msgstr "المستلمين"
+
+#, fuzzy
+msgid "Duplicate recipient"
+msgstr "المستلمين"
+
+msgid "Recipient already exists."
 msgstr ""
 
 msgid "Notify sender"
@@ -2371,13 +2379,6 @@ msgid "Add/Edit Cc recipient"
 msgstr "المستلمين"
 
 #, fuzzy
-msgid "Duplicate recipient"
-msgstr "المستلمين"
-
-msgid "Recipient already exists."
-msgstr ""
-
-#, fuzzy
 msgid "No Cc recipient configured"
 msgstr "المستلمين"
 
@@ -2403,13 +2404,6 @@ msgid ""
 "Cc recipients can be used to set a default Cc user in new mail, replies or "
 "both."
 msgstr ""
-
-msgid "Following recipients are already exists"
-msgstr ""
-
-#, fuzzy
-msgid "Duplicate recipients"
-msgstr "المستلمين"
 
 msgid "Help"
 msgstr ""
@@ -2455,6 +2449,9 @@ msgid "Send email"
 msgstr ""
 
 msgid "Delete recipient from suggestion list"
+msgstr ""
+
+msgid "Copy all email addresses"
 msgstr ""
 
 msgid "View recipient"
@@ -2909,12 +2906,16 @@ msgstr ""
 msgid "Loading from addresses"
 msgstr ""
 
+msgid "Forward Mail"
+msgstr ""
+
 msgid "Please select a from address record."
 msgstr ""
 
-msgid ""
-"Manage the email addresses you can use as sender address when sending an "
-"email."
+msgid "Add/Edit From recipient"
+msgstr ""
+
+msgid "Manage the recipients used in the 'From' field"
 msgstr ""
 
 msgid "View"
@@ -3217,9 +3218,7 @@ msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr ""
 
-#. TRANSLATORS: This message is used as label for the field which indicates the date/time on which the given message was sent.
-msgctxt "mail.previewpanel"
-msgid "Sent"
+msgid "D {0}"
 msgstr ""
 
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
@@ -3968,9 +3967,6 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
-msgid "D {0}"
-msgstr ""
-
 msgid "D d-m"
 msgstr ""
 
@@ -4285,6 +4281,11 @@ msgid "Are you sure you want to empty {0}?"
 msgstr ""
 
 msgid "Show all folders"
+msgstr ""
+
+msgid ""
+"You have insufficient privileges to move this folder. Would you like to copy "
+"instead?"
 msgstr ""
 
 msgid "CC"
@@ -4862,6 +4863,9 @@ msgstr ""
 msgid "Show unread mail counter in application title"
 msgstr ""
 
+msgid "Hide widget panel"
+msgstr ""
+
 msgid "File previewing"
 msgstr ""
 
@@ -5214,9 +5218,6 @@ msgid "Assigned To"
 msgstr ""
 
 msgid "Sort by: Assignee"
-msgstr ""
-
-msgid "Sort by: Start Date"
 msgstr ""
 
 msgid "Sort by: Owner"
