--- a/server/language/sl_SI.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/sl_SI.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -942,20 +942,19 @@ msgstr "Razvrsti po: Ponavljajoče"
 msgid "Sort by: Subject"
 msgstr "Razvrsti po: Predmetu"
 
-# 90%
-msgid "Startdate"
-msgstr "Datum začetka"
+msgid "Start Date"
+msgstr "Začetni datum"
 
-# 89%
-msgid "Sort by: Startdate"
+msgid "Sort by: Start Date"
 msgstr "Razvrsti po: Času začetka"
 
 # 87%
-msgid "Enddate"
+#, fuzzy
+msgid "End Date"
 msgstr "Datum zaključka"
 
-msgid "Sort by: Enddate"
-msgstr "Razvrsti po: Času zaključka"
+msgid "Sort by: End Date"
+msgstr ""
 
 msgid "Organizer"
 msgstr "Organizator"
@@ -968,14 +967,6 @@ msgstr "Neobvezen udeleženec"
 
 msgid "Show Time As"
 msgstr "Prikaži čas kot"
-
-msgid "Start Date"
-msgstr "Začetni datum"
-
-# 87%
-#, fuzzy
-msgid "End Date"
-msgstr "Datum zaključka"
 
 msgid "Recurrence pattern"
 msgstr "Vzorec ponavljanja"
@@ -1678,17 +1669,17 @@ msgstr "Razvrsti po: Neobvezen udeleženec"
 msgid "Sort by: Resources"
 msgstr "Razvrsti po: Viri"
 
-msgid "Recurring Startdate"
-msgstr "Ponavljajoči datum začetka"
+msgid "Recurring Start Date"
+msgstr ""
 
-msgid "Sort by: Recurring Startdate"
-msgstr "Razvrsti po: Ponavljajoči datum začetka"
+msgid "Sort by: Recurring Start Date"
+msgstr ""
 
-msgid "Recurring Enddate"
-msgstr "Ponavljajoči datum zaključka"
+msgid "Recurring End Date"
+msgstr ""
 
-msgid "Sort by: Recurring Enddate"
-msgstr "Razvrsti po: Ponavljajoči datum zaključka"
+msgid "Sort by: Recurring End Date"
+msgstr ""
 
 # 77%
 msgid "Recurring Pattern"
@@ -2009,6 +2000,22 @@ msgstr "Zavrni zahtevo za sestanek"
 #, fuzzy
 msgid "Mark complete and delete"
 msgstr "Označi kot dokončano"
+
+#, fuzzy
+msgid "Following recipients are already exists"
+msgstr "Naslednji prejemnik (ki) niso bili doseženi"
+
+#, fuzzy
+msgid "Duplicate recipients"
+msgstr "Uredi prejemnika"
+
+#, fuzzy
+msgid "Duplicate recipient"
+msgstr "Uredi prejemnika"
+
+#, fuzzy
+msgid "Recipient already exists."
+msgstr "Uporabnik že obstaja"
 
 # 77%
 #, fuzzy
@@ -2521,14 +2528,6 @@ msgid "Add/Edit Cc recipient"
 msgstr "Uredi prejemnika"
 
 #, fuzzy
-msgid "Duplicate recipient"
-msgstr "Uredi prejemnika"
-
-#, fuzzy
-msgid "Recipient already exists."
-msgstr "Uporabnik že obstaja"
-
-#, fuzzy
 msgid "No Cc recipient configured"
 msgstr "Ni nastavljenih podpisov"
 
@@ -2558,14 +2557,6 @@ msgid ""
 "Cc recipients can be used to set a default Cc user in new mail, replies or "
 "both."
 msgstr ""
-
-#, fuzzy
-msgid "Following recipients are already exists"
-msgstr "Naslednji prejemnik (ki) niso bili doseženi"
-
-#, fuzzy
-msgid "Duplicate recipients"
-msgstr "Uredi prejemnika"
 
 msgid "Help"
 msgstr "Pomoč"
@@ -2617,6 +2608,9 @@ msgstr "Pošlji sporočilo"
 #, fuzzy
 msgid "Delete recipient from suggestion list"
 msgstr "Izbriši distribucijski seznam."
+
+msgid "Copy all email addresses"
+msgstr ""
 
 msgid "View recipient"
 msgstr "Poglej prejemnika"
@@ -3112,12 +3106,16 @@ msgstr ""
 msgid "Loading from addresses"
 msgstr ""
 
+msgid "Forward Mail"
+msgstr ""
+
 msgid "Please select a from address record."
 msgstr ""
 
-msgid ""
-"Manage the email addresses you can use as sender address when sending an "
-"email."
+msgid "Add/Edit From recipient"
+msgstr ""
+
+msgid "Manage the recipients used in the 'From' field"
 msgstr ""
 
 msgid "View"
@@ -3450,11 +3448,8 @@ msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr "v imenu"
 
-# 100%
-#. TRANSLATORS: This message is used as label for the field which indicates the date/time on which the given message was sent.
-msgctxt "mail.previewpanel"
-msgid "Sent"
-msgstr "Poslano"
+msgid "D {0}"
+msgstr ""
 
 # 100%
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
@@ -4294,9 +4289,6 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
-msgid "D {0}"
-msgstr ""
-
 #, fuzzy
 msgid "D d-m"
 msgstr "d-m-Y"
@@ -4645,6 +4637,11 @@ msgstr "Ali ste prepričani, da želite izprazniti {0}\"?"
 
 msgid "Show all folders"
 msgstr "Pokaži vse mape"
+
+msgid ""
+"You have insufficient privileges to move this folder. Would you like to copy "
+"instead?"
+msgstr ""
 
 msgid "CC"
 msgstr "Kp"
@@ -5264,6 +5261,9 @@ msgstr ""
 msgid "Show unread mail counter in application title"
 msgstr ""
 
+msgid "Hide widget panel"
+msgstr ""
+
 msgid "File previewing"
 msgstr ""
 
@@ -5657,9 +5657,6 @@ msgstr "Dodeljeno"
 
 msgid "Sort by: Assignee"
 msgstr "Razvrsti po: Pooblaščencu"
-
-msgid "Sort by: Start Date"
-msgstr "Razvrsti po: Času začetka"
 
 msgid "Sort by: Owner"
 msgstr "Razvrsti po: Lastniku"
