--- a/server/language/es_CA.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/es_CA.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -925,20 +925,19 @@ msgstr "Ordenar por: Perioricidad"
 msgid "Sort by: Subject"
 msgstr "Ordenar por. Asunto"
 
-# 90%
-msgid "Startdate"
+msgid "Start Date"
 msgstr "Fecha de inicio"
 
-# 89%
-msgid "Sort by: Startdate"
-msgstr "Ordenar por: Fecha de inicio"
+msgid "Sort by: Start Date"
+msgstr "Ordenar por. Fecha de inicio"
 
 # 87%
-msgid "Enddate"
+#, fuzzy
+msgid "End Date"
 msgstr "Fecha de finalización"
 
-msgid "Sort by: Enddate"
-msgstr "Ordenar por: Fecha de finalización"
+msgid "Sort by: End Date"
+msgstr ""
 
 msgid "Organizer"
 msgstr "Organizador"
@@ -951,14 +950,6 @@ msgstr "Asistentes Opcionales"
 
 msgid "Show Time As"
 msgstr "Mostrar hora como"
-
-msgid "Start Date"
-msgstr "Fecha de inicio"
-
-# 87%
-#, fuzzy
-msgid "End Date"
-msgstr "Fecha de finalización"
 
 msgid "Recurrence pattern"
 msgstr "Patrón de repetición"
@@ -1667,17 +1658,17 @@ msgstr "Ordenar por: Asistente Opcional"
 msgid "Sort by: Resources"
 msgstr "Ordenar por: Recursos"
 
-msgid "Recurring Startdate"
-msgstr "Fecha inicio Recurrente"
+msgid "Recurring Start Date"
+msgstr ""
 
-msgid "Sort by: Recurring Startdate"
-msgstr "Ordenador por: Fecha de inicio Recurrente"
+msgid "Sort by: Recurring Start Date"
+msgstr ""
 
-msgid "Recurring Enddate"
-msgstr "Fecha de finalización Recurrente"
+msgid "Recurring End Date"
+msgstr ""
 
-msgid "Sort by: Recurring Enddate"
-msgstr "Ordenar por: Fecha de finalización Recurrente"
+msgid "Sort by: Recurring End Date"
+msgstr ""
 
 # 77%
 msgid "Recurring Pattern"
@@ -2006,6 +1997,21 @@ msgstr "Rechazar solicitud de reunión"
 #, fuzzy
 msgid "Mark complete and delete"
 msgstr "Marcar como Completado"
+
+msgid "Following recipients are already exists"
+msgstr ""
+
+#, fuzzy
+msgid "Duplicate recipients"
+msgstr "Editar recipiente"
+
+#, fuzzy
+msgid "Duplicate recipient"
+msgstr "Editar recipiente"
+
+#, fuzzy
+msgid "Recipient already exists."
+msgstr "Ya existe este Usuario"
 
 # 77%
 #, fuzzy
@@ -2520,14 +2526,6 @@ msgid "Add/Edit Cc recipient"
 msgstr "Editar recipiente"
 
 #, fuzzy
-msgid "Duplicate recipient"
-msgstr "Editar recipiente"
-
-#, fuzzy
-msgid "Recipient already exists."
-msgstr "Ya existe este Usuario"
-
-#, fuzzy
 msgid "No Cc recipient configured"
 msgstr "Firmas no configuradas"
 
@@ -2557,13 +2555,6 @@ msgid ""
 "Cc recipients can be used to set a default Cc user in new mail, replies or "
 "both."
 msgstr ""
-
-msgid "Following recipients are already exists"
-msgstr ""
-
-#, fuzzy
-msgid "Duplicate recipients"
-msgstr "Editar recipiente"
 
 msgid "Help"
 msgstr ""
@@ -2617,6 +2608,9 @@ msgstr "Enviar Correo Electrónico"
 #, fuzzy
 msgid "Delete recipient from suggestion list"
 msgstr "Borrar la Lista de Distribución."
+
+msgid "Copy all email addresses"
+msgstr ""
 
 msgid "View recipient"
 msgstr "Ver recipiente"
@@ -3101,12 +3095,16 @@ msgstr ""
 msgid "Loading from addresses"
 msgstr ""
 
+msgid "Forward Mail"
+msgstr ""
+
 msgid "Please select a from address record."
 msgstr ""
 
-msgid ""
-"Manage the email addresses you can use as sender address when sending an "
-"email."
+msgid "Add/Edit From recipient"
+msgstr ""
+
+msgid "Manage the recipients used in the 'From' field"
 msgstr ""
 
 msgid "View"
@@ -3433,11 +3431,8 @@ msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr ""
 
-# 100%
-#. TRANSLATORS: This message is used as label for the field which indicates the date/time on which the given message was sent.
-msgctxt "mail.previewpanel"
-msgid "Sent"
-msgstr "Enviado"
+msgid "D {0}"
+msgstr ""
 
 # 75%
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
@@ -4268,9 +4263,6 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
-msgid "D {0}"
-msgstr ""
-
 #, fuzzy
 msgid "D d-m"
 msgstr "d-m-A"
@@ -4622,6 +4614,11 @@ msgstr "¿Esta seguro de que desea vaciar {0}?"
 
 msgid "Show all folders"
 msgstr "Mostrar todo"
+
+msgid ""
+"You have insufficient privileges to move this folder. Would you like to copy "
+"instead?"
+msgstr ""
 
 msgid "CC"
 msgstr "CC"
@@ -5236,6 +5233,9 @@ msgstr ""
 msgid "Show unread mail counter in application title"
 msgstr ""
 
+msgid "Hide widget panel"
+msgstr ""
+
 msgid "File previewing"
 msgstr ""
 
@@ -5625,9 +5625,6 @@ msgstr "Asignado A"
 
 msgid "Sort by: Assignee"
 msgstr "Ordenar por. Titular"
-
-msgid "Sort by: Start Date"
-msgstr "Ordenar por. Fecha de inicio"
 
 msgid "Sort by: Owner"
 msgstr "Ordenar por. Propietario"
