--- a/server/language/ga_GA.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ga_GA.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -903,16 +903,16 @@ msgstr ""
 msgid "Sort by: Subject"
 msgstr ""
 
-msgid "Startdate"
+msgid "Start Date"
 msgstr ""
 
-msgid "Sort by: Startdate"
+msgid "Sort by: Start Date"
 msgstr ""
 
-msgid "Enddate"
+msgid "End Date"
 msgstr ""
 
-msgid "Sort by: Enddate"
+msgid "Sort by: End Date"
 msgstr ""
 
 msgid "Organizer"
@@ -925,12 +925,6 @@ msgid "Optional Attendee"
 msgstr ""
 
 msgid "Show Time As"
-msgstr ""
-
-msgid "Start Date"
-msgstr ""
-
-msgid "End Date"
 msgstr ""
 
 msgid "Recurrence pattern"
@@ -1568,16 +1562,16 @@ msgstr ""
 msgid "Sort by: Resources"
 msgstr ""
 
-msgid "Recurring Startdate"
+msgid "Recurring Start Date"
 msgstr ""
 
-msgid "Sort by: Recurring Startdate"
+msgid "Sort by: Recurring Start Date"
 msgstr ""
 
-msgid "Recurring Enddate"
+msgid "Recurring End Date"
 msgstr ""
 
-msgid "Sort by: Recurring Enddate"
+msgid "Sort by: Recurring End Date"
 msgstr ""
 
 msgid "Recurring Pattern"
@@ -1860,6 +1854,18 @@ msgid "Decline and delete"
 msgstr ""
 
 msgid "Mark complete and delete"
+msgstr ""
+
+msgid "Following recipients are already exists"
+msgstr ""
+
+msgid "Duplicate recipients"
+msgstr ""
+
+msgid "Duplicate recipient"
+msgstr ""
+
+msgid "Recipient already exists."
 msgstr ""
 
 msgid "Notify sender"
@@ -2331,12 +2337,6 @@ msgstr ""
 msgid "Add/Edit Cc recipient"
 msgstr ""
 
-msgid "Duplicate recipient"
-msgstr ""
-
-msgid "Recipient already exists."
-msgstr ""
-
 msgid "No Cc recipient configured"
 msgstr ""
 
@@ -2358,12 +2358,6 @@ msgstr ""
 msgid ""
 "Cc recipients can be used to set a default Cc user in new mail, replies or "
 "both."
-msgstr ""
-
-msgid "Following recipients are already exists"
-msgstr ""
-
-msgid "Duplicate recipients"
 msgstr ""
 
 msgid "Help"
@@ -2408,6 +2402,9 @@ msgid "Send email"
 msgstr ""
 
 msgid "Delete recipient from suggestion list"
+msgstr ""
+
+msgid "Copy all email addresses"
 msgstr ""
 
 msgid "View recipient"
@@ -2856,12 +2853,16 @@ msgstr ""
 msgid "Loading from addresses"
 msgstr ""
 
+msgid "Forward Mail"
+msgstr ""
+
 msgid "Please select a from address record."
 msgstr ""
 
-msgid ""
-"Manage the email addresses you can use as sender address when sending an "
-"email."
+msgid "Add/Edit From recipient"
+msgstr ""
+
+msgid "Manage the recipients used in the 'From' field"
 msgstr ""
 
 msgid "View"
@@ -3163,9 +3164,7 @@ msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr ""
 
-#. TRANSLATORS: This message is used as label for the field which indicates the date/time on which the given message was sent.
-msgctxt "mail.previewpanel"
-msgid "Sent"
+msgid "D {0}"
 msgstr ""
 
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
@@ -3909,9 +3908,6 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
-msgid "D {0}"
-msgstr ""
-
 msgid "D d-m"
 msgstr ""
 
@@ -4223,6 +4219,11 @@ msgid "Are you sure you want to empty {0}?"
 msgstr ""
 
 msgid "Show all folders"
+msgstr ""
+
+msgid ""
+"You have insufficient privileges to move this folder. Would you like to copy "
+"instead?"
 msgstr ""
 
 msgid "CC"
@@ -4793,6 +4794,9 @@ msgstr ""
 msgid "Show unread mail counter in application title"
 msgstr ""
 
+msgid "Hide widget panel"
+msgstr ""
+
 msgid "File previewing"
 msgstr ""
 
@@ -5143,9 +5147,6 @@ msgid "Assigned To"
 msgstr ""
 
 msgid "Sort by: Assignee"
-msgstr ""
-
-msgid "Sort by: Start Date"
 msgstr ""
 
 msgid "Sort by: Owner"
